Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8302

Shell image viewer does not always retain the correct aspect ratio.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell

    Description

      When viewing an image with the image viewer, it does not always retain the image's correct aspect ratio
      on certain combinations of the image size and the size of the window it is displayed on. One can
      reproduce it for example by opening an image sized 700x1200 pixel and resize the window around
      640x480 pixel (maybe one must try a bit to find the exact size(es)).

      The attatched patch should fix this.
      Additionally the patch

      • removes the first if-clause because this case can be handled by the second one.
      • remove the position calculations from the if-blocks and place a single one after the if-cases.
      • remove the last case, because it shouldn't be needed anymore.

      Attachments

        1. shimgvw_ar.patch
          3 kB
          Forever Winter
        2. shimgvw_ar_v2.patch
          3 kB
          Forever Winter

        Activity

          People

            Z98 Z98
            Forever Winter Forever Winter
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: