[CORE-8302] Fix aspect ratio calculation in shell image viewer. Patch by Ricardo Hanke.

svn path=/trunk/; revision=65609